--- a/jinran.ipynb
+++ b/jinran.ipynb
@@ -508,6 +508,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('mountains_vs_beaches_preferences.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we get the median of travel frequency to split the data into two groups\n",
+    "median = df['Travel_Frequency'].median()\n",
+    "df['Travel_Frequency'] = np.where(df['Travel_Frequency'] >= median, 'frequent', 'not_frequent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Gender', 'Income', 'Education_Level', 'Preferred_Activities',\n",
+       "       'Vacation_Budget', 'Location', 'Proximity_to_Mountains',\n",
+       "       'Proximity_to_Beaches', 'Favorite_Season', 'Pets',\n",
+       "       'Environmental_Concerns', 'Preference',\n",
+       "       'Travel_Frequency_not_frequent'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Coefficients:\n",
+      "Intercept: -0.001\n",
+      "Travel_Frequency_frequent coefficient: 0.003\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[23562 15734]\n",
+      " [ 7872  5276]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.75      0.60      0.67     39296\n",
+      "           1       0.25      0.40      0.31     13148\n",
+      "\n",
+      "    accuracy                           0.55     52444\n",
+      "   macro avg       0.50      0.50      0.49     52444\n",
+      "weighted avg       0.62      0.55      0.58     52444\n",
+      "\n",
+      "\n",
+      "Detailed Predictions:\n",
+      "       Travel_Frequency  Actual_Preference  Predicted_Preference  \\\n",
+      "0                 False                  1                     0   \n",
+      "1                  True                  0                     1   \n",
+      "2                  True                  1                     1   \n",
+      "3                 False                  1                     0   \n",
+      "4                 False                  0                     0   \n",
+      "...                 ...                ...                   ...   \n",
+      "52439              True                  1                     1   \n",
+      "52440             False                  0                     0   \n",
+      "52441             False                  0                     0   \n",
+      "52442             False                  0                     0   \n",
+      "52443             False                  0                     0   \n",
+      "\n",
+      "       Prob_Mountain  Prob_Beach  \n",
+      "0           0.500275    0.499725  \n",
+      "1           0.499451    0.500549  \n",
+      "2           0.499451    0.500549  \n",
+      "3           0.500275    0.499725  \n",
+      "4           0.500275    0.499725  \n",
+      "...              ...         ...  \n",
+      "52439       0.499451    0.500549  \n",
+      "52440       0.500275    0.499725  \n",
+      "52441       0.500275    0.499725  \n",
+      "52442       0.500275    0.499725  \n",
+      "52443       0.500275    0.499725  \n",
+      "\n",
+      "[52444 rows x 5 columns]\n",
+      "\n",
+      "Odds Ratio for Travel_Frequency_frequent: 1.003\n",
+      "\n",
+      "Interpretation:\n",
+      "1. Model Performance:\n",
+      "  - Accuracy: 0.550\n",
+      "\n",
+      "2. Probabilities by Travel Frequency:\n",
+      "  - frequent: nan probability of preferring beach\n",
+      "  - not_frequent: nan probability of preferring beach\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/dv/_l_gwqk95zdggctvnm04j3780000gn/T/ipykernel_70200/3841132931.py:54: RuntimeWarning: Mean of empty slice.\n",
+      "  beach_prob = y_pred_prob[mask][:, 1].mean()\n",
+      "/opt/anaconda3/envs/NN/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run logistic regression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
+    "\n",
+    "# Use the dummy variable columns directly\n",
+    "X = df[['Travel_Frequency_not_frequent']]\n",
+    "\n",
+    "y = df['Preference']\n",
+    "\n",
+    "# Fit logistic regression\n",
+    "model = LogisticRegression(random_state=42, class_weight='balanced')\n",
+    "\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X)\n",
+    "y_pred_prob = model.predict_proba(X)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Model Coefficients:\")\n",
+    "print(f\"Intercept: {model.intercept_[0]:.3f}\")\n",
+    "print(f\"Travel_Frequency_frequent coefficient: {model.coef_[0][0]:.3f}\")\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y, y_pred))\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y, y_pred))\n",
+    "\n",
+    "# Print predicted probabilities for each case\n",
+    "print(\"\\nDetailed Predictions:\")\n",
+    "results_df = pd.DataFrame({\n",
+    "   'Travel_Frequency': df['Travel_Frequency_not_frequent'],\n",
+    "   'Actual_Preference': y,\n",
+    "   'Predicted_Preference': y_pred,\n",
+    "   'Prob_Mountain': y_pred_prob[:, 0],\n",
+    "   'Prob_Beach': y_pred_prob[:, 1]\n",
+    "})\n",
+    "print(results_df)\n",
+    "\n",
+    "# Calculate odds ratio\n",
+    "odds_ratio = np.exp(model.coef_[0][0])\n",
+    "print(f\"\\nOdds Ratio for Travel_Frequency_frequent: {odds_ratio:.3f}\")\n",
+    "\n",
+    "# Quick interpretation\n",
+    "print(\"\\nInterpretation:\")\n",
+    "print(\"1. Model Performance:\")\n",
+    "print(f\"  - Accuracy: {accuracy_score(y, y_pred):.3f}\")\n",
+    "\n",
+    "print(\"\\n2. Probabilities by Travel Frequency:\")\n",
+    "for freq in ['frequent', 'not_frequent']:\n",
+    "   mask = df['Travel_Frequency_not_frequent'] == freq\n",
+    "   beach_prob = y_pred_prob[mask][:, 1].mean()\n",
+    "   print(f\"  - {freq}: {beach_prob:.3f} probability of preferring beach\")\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
