finished write up

--- a/jinran.ipynb
+++ b/jinran.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,177 +40,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Education_Level</th>\n",
-       "      <th>Travel_Frequency</th>\n",
-       "      <th>Preferred_Activities</th>\n",
-       "      <th>Vacation_Budget</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Proximity_to_Mountains</th>\n",
-       "      <th>Proximity_to_Beaches</th>\n",
-       "      <th>Favorite_Season</th>\n",
-       "      <th>Pets</th>\n",
-       "      <th>Environmental_Concerns</th>\n",
-       "      <th>Preference</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>56</td>\n",
-       "      <td>male</td>\n",
-       "      <td>71477</td>\n",
-       "      <td>bachelor</td>\n",
-       "      <td>9</td>\n",
-       "      <td>skiing</td>\n",
-       "      <td>2477</td>\n",
-       "      <td>urban</td>\n",
-       "      <td>175</td>\n",
-       "      <td>267</td>\n",
-       "      <td>summer</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>69</td>\n",
-       "      <td>male</td>\n",
-       "      <td>88740</td>\n",
-       "      <td>master</td>\n",
-       "      <td>1</td>\n",
-       "      <td>swimming</td>\n",
-       "      <td>4777</td>\n",
-       "      <td>suburban</td>\n",
-       "      <td>228</td>\n",
-       "      <td>190</td>\n",
-       "      <td>fall</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>46</td>\n",
-       "      <td>female</td>\n",
-       "      <td>46562</td>\n",
-       "      <td>master</td>\n",
-       "      <td>0</td>\n",
-       "      <td>skiing</td>\n",
-       "      <td>1469</td>\n",
-       "      <td>urban</td>\n",
-       "      <td>71</td>\n",
-       "      <td>280</td>\n",
-       "      <td>winter</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32</td>\n",
-       "      <td>non-binary</td>\n",
-       "      <td>99044</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>6</td>\n",
-       "      <td>hiking</td>\n",
-       "      <td>1482</td>\n",
-       "      <td>rural</td>\n",
-       "      <td>31</td>\n",
-       "      <td>255</td>\n",
-       "      <td>summer</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>60</td>\n",
-       "      <td>female</td>\n",
-       "      <td>106583</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>5</td>\n",
-       "      <td>sunbathing</td>\n",
-       "      <td>516</td>\n",
-       "      <td>suburban</td>\n",
-       "      <td>23</td>\n",
-       "      <td>151</td>\n",
-       "      <td>winter</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age      Gender  Income Education_Level  Travel_Frequency  \\\n",
-       "0   56        male   71477        bachelor                 9   \n",
-       "1   69        male   88740          master                 1   \n",
-       "2   46      female   46562          master                 0   \n",
-       "3   32  non-binary   99044     high school                 6   \n",
-       "4   60      female  106583     high school                 5   \n",
-       "\n",
-       "  Preferred_Activities  Vacation_Budget  Location  Proximity_to_Mountains  \\\n",
-       "0               skiing             2477     urban                     175   \n",
-       "1             swimming             4777  suburban                     228   \n",
-       "2               skiing             1469     urban                      71   \n",
-       "3               hiking             1482     rural                      31   \n",
-       "4           sunbathing              516  suburban                      23   \n",
-       "\n",
-       "   Proximity_to_Beaches Favorite_Season  Pets  Environmental_Concerns  \\\n",
-       "0                   267          summer     0                       1   \n",
-       "1                   190            fall     0                       1   \n",
-       "2                   280          winter     0                       0   \n",
-       "3                   255          summer     1                       0   \n",
-       "4                   151          winter     1                       1   \n",
-       "\n",
-       "   Preference  \n",
-       "0           1  \n",
-       "1           0  \n",
-       "2           1  \n",
-       "3           1  \n",
-       "4           0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# we get the median of travel frequency to split the data into two groups\n",
@@ -219,8 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we use the median of travel frequency to split each data point to either frequent or not frequent. So we can use Chi-square test later."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +216,7 @@
        "4           0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,26 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we get the preference column based on the median of travel frequency\n",
-    "travel_frequently = df[df['Travel_Frequency'] == 'frequent']['Preference']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "travel_frequently = df[df['Travel_Frequency'] == 'frequent']['Preference']\n",
     "travel_less_frequently = df[df['Travel_Frequency'] == 'not_frequent']['Preference']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -465,8 +293,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I created two donut charts to visually represent the mountain versus beach preferences between frequent and less frequent travelers. The visualization shows the proportional distribution of preferences in each group, with each donut chart clearly labeled and using a consistent color scheme of lightsteelblue and sandybrown to represent mountains and beaches respectively. Among frequent travelers, approximately 75% prefer mountains and 25% prefer beaches, while less frequent travelers show a remarkably similar distribution with about 75% favoring mountains and 25% favoring beaches. The donut charts were positioned side by side for easy comparison, with percentages clearly displayed on each segment, and the overall layout includes a main title for clear context. This visualization effectively illustrates that both frequent and less frequent travelers have nearly identical preferences, suggesting that travel frequency does not significantly influence the choice between mountains and beaches."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -502,199 +337,29 @@
     "print(\"\\nChi-square Test Results:\")\n",
     "print(f\"Chi-square statistic: {chi2:.4f}\")\n",
     "print(f\"p-value: {p_value:.4f}\")\n",
-    "print(f\"Degrees of freedom: {dof}\")\n",
-    "\n"
+    "print(f\"Degrees of freedom: {dof}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.read_csv('mountains_vs_beaches_preferences.csv')"
+    "I conducted a chi-square test of independence to examine the relationship between travel frequency and preferences for mountains versus beaches. The analysis was based on a contingency table showing that among frequent travelers, 23,562 preferred mountains and 7,872 preferred beaches, while among less frequent travelers, 15,734 preferred mountains and 5,276 preferred beaches. The chi-square test yielded a statistic of 0.0283 with a p-value of 0.8665 and one degree of freedom. The high p-value (well above the conventional significance level of 0.05) indicates strong evidence for failing to reject the null hypothesis, suggesting there is no significant association between travel frequency and preference for mountains versus beaches. This statistical finding aligns with the visual observation from the donut charts, confirming that both frequent and less frequent travelers show similar preference patterns, with approximately 75% preferring mountains in both groups."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# we get the median of travel frequency to split the data into two groups\n",
-    "median = df['Travel_Frequency'].median()\n",
-    "df['Travel_Frequency'] = np.where(df['Travel_Frequency'] >= median, 'frequent', 'not_frequent')"
+    "### Conclusion"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Age', 'Gender', 'Income', 'Education_Level', 'Preferred_Activities',\n",
-       "       'Vacation_Budget', 'Location', 'Proximity_to_Mountains',\n",
-       "       'Proximity_to_Beaches', 'Favorite_Season', 'Pets',\n",
-       "       'Environmental_Concerns', 'Preference',\n",
-       "       'Travel_Frequency_not_frequent'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.columns"
+    "The analysis reveals there is no significant relationship between how frequently people travel and their preference for mountains versus beaches. This conclusion is supported by both statistical evidence and visual representation. The chi-square test yielded a high p-value of 0.8665, far exceeding the conventional 0.05 significance level, indicating no statistical association between travel frequency and destination preference. The visualization through donut charts further reinforces this finding, showing remarkably similar preference distributions between frequent and less frequent travelers, with both groups displaying approximately 75% preference for mountains and 25% for beaches. This consistent pattern suggests that the choice between mountain and beach destinations is likely influenced by other factors not related to travel frequency. The robust alignment between statistical testing and visual analysis strengthens the reliability of these findings, indicating that travel planners and tourism services should not assume that frequent travelers have different mountain/beach preferences compared to less frequent travelers."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Coefficients:\n",
-      "Intercept: -0.001\n",
-      "Travel_Frequency_frequent coefficient: 0.003\n",
-      "\n",
-      "Confusion Matrix:\n",
-      "[[23562 15734]\n",
-      " [ 7872  5276]]\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.75      0.60      0.67     39296\n",
-      "           1       0.25      0.40      0.31     13148\n",
-      "\n",
-      "    accuracy                           0.55     52444\n",
-      "   macro avg       0.50      0.50      0.49     52444\n",
-      "weighted avg       0.62      0.55      0.58     52444\n",
-      "\n",
-      "\n",
-      "Detailed Predictions:\n",
-      "       Travel_Frequency  Actual_Preference  Predicted_Preference  \\\n",
-      "0                 False                  1                     0   \n",
-      "1                  True                  0                     1   \n",
-      "2                  True                  1                     1   \n",
-      "3                 False                  1                     0   \n",
-      "4                 False                  0                     0   \n",
-      "...                 ...                ...                   ...   \n",
-      "52439              True                  1                     1   \n",
-      "52440             False                  0                     0   \n",
-      "52441             False                  0                     0   \n",
-      "52442             False                  0                     0   \n",
-      "52443             False                  0                     0   \n",
-      "\n",
-      "       Prob_Mountain  Prob_Beach  \n",
-      "0           0.500275    0.499725  \n",
-      "1           0.499451    0.500549  \n",
-      "2           0.499451    0.500549  \n",
-      "3           0.500275    0.499725  \n",
-      "4           0.500275    0.499725  \n",
-      "...              ...         ...  \n",
-      "52439       0.499451    0.500549  \n",
-      "52440       0.500275    0.499725  \n",
-      "52441       0.500275    0.499725  \n",
-      "52442       0.500275    0.499725  \n",
-      "52443       0.500275    0.499725  \n",
-      "\n",
-      "[52444 rows x 5 columns]\n",
-      "\n",
-      "Odds Ratio for Travel_Frequency_frequent: 1.003\n",
-      "\n",
-      "Interpretation:\n",
-      "1. Model Performance:\n",
-      "  - Accuracy: 0.550\n",
-      "\n",
-      "2. Probabilities by Travel Frequency:\n",
-      "  - frequent: nan probability of preferring beach\n",
-      "  - not_frequent: nan probability of preferring beach\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dv/_l_gwqk95zdggctvnm04j3780000gn/T/ipykernel_70200/3841132931.py:54: RuntimeWarning: Mean of empty slice.\n",
-      "  beach_prob = y_pred_prob[mask][:, 1].mean()\n",
-      "/opt/anaconda3/envs/NN/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# run logistic regression\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
-    "\n",
-    "# Use the dummy variable columns directly\n",
-    "X = df[['Travel_Frequency_not_frequent']]\n",
-    "\n",
-    "y = df['Preference']\n",
-    "\n",
-    "# Fit logistic regression\n",
-    "model = LogisticRegression(random_state=42, class_weight='balanced')\n",
-    "\n",
-    "model.fit(X, y)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred = model.predict(X)\n",
-    "y_pred_prob = model.predict_proba(X)\n",
-    "\n",
-    "# Print results\n",
-    "print(\"Model Coefficients:\")\n",
-    "print(f\"Intercept: {model.intercept_[0]:.3f}\")\n",
-    "print(f\"Travel_Frequency_frequent coefficient: {model.coef_[0][0]:.3f}\")\n",
-    "\n",
-    "print(\"\\nConfusion Matrix:\")\n",
-    "print(confusion_matrix(y, y_pred))\n",
-    "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y, y_pred))\n",
-    "\n",
-    "# Print predicted probabilities for each case\n",
-    "print(\"\\nDetailed Predictions:\")\n",
-    "results_df = pd.DataFrame({\n",
-    "   'Travel_Frequency': df['Travel_Frequency_not_frequent'],\n",
-    "   'Actual_Preference': y,\n",
-    "   'Predicted_Preference': y_pred,\n",
-    "   'Prob_Mountain': y_pred_prob[:, 0],\n",
-    "   'Prob_Beach': y_pred_prob[:, 1]\n",
-    "})\n",
-    "print(results_df)\n",
-    "\n",
-    "# Calculate odds ratio\n",
-    "odds_ratio = np.exp(model.coef_[0][0])\n",
-    "print(f\"\\nOdds Ratio for Travel_Frequency_frequent: {odds_ratio:.3f}\")\n",
-    "\n",
-    "# Quick interpretation\n",
-    "print(\"\\nInterpretation:\")\n",
-    "print(\"1. Model Performance:\")\n",
-    "print(f\"  - Accuracy: {accuracy_score(y, y_pred):.3f}\")\n",
-    "\n",
-    "print(\"\\n2. Probabilities by Travel Frequency:\")\n",
-    "for freq in ['frequent', 'not_frequent']:\n",
-    "   mask = df['Travel_Frequency_not_frequent'] == freq\n",
-    "   beach_prob = y_pred_prob[mask][:, 1].mean()\n",
-    "   print(f\"  - {freq}: {beach_prob:.3f} probability of preferring beach\")\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
