--- a/Rundong.ipynb
+++ b/Rundong.ipynb
@@ -741,7 +741,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The high p-value (0.835) suggests that there is no statistically significant association between the favorite season and the preference for beaches or mountains. This implies that people's preferences for beaches or mountains are not strongly influenced by their favorite season, including summer.\n",
+        "The p-value suggests that there is no statistically significant association between the favorite season and the preference for beaches or mountains. This implies that people's preferences for beaches or mountains are not strongly influenced by their favorite season, including summer.\n",
         "\n",
         "\n"
       ],
